fix width for container

--- a/practice-two/src/index.html
+++ b/practice-two/src/index.html
@@ -11,7 +11,7 @@
 <body>
   <!-- sign up start  -->
   <div class="sign-up">
-    <div class="sign-up__item">
+    <div class="sign-up__item container">
       <p class="sign-up__desc">Sign up and get 20% off to your first order. <a class="sign-up__advertise"
           href="javascript:void(0)">Sign Up
           Now</a></p>
@@ -47,7 +47,7 @@
 
   <!-- banner start  -->
   <section class="banner">
-    <div class="banner__wrapper">
+    <div class="banner__wrapper container">
       <div class="banner__content">
         <h2 class="banner__title title title--secondary">FIND CLOTHES THAT MATCHES YOUR STYLE</h2>
         <p class="banner__desc desc desc--primary">Browse through our diverse range of meticulously crafted garments, designed to
@@ -101,7 +101,7 @@
   <div class="container">
     <section class="product product--center">
       <h2 class="title title--primary">new arrivals</h2>
-      <div class="card">
+      <div class="card product__list">
         <div class="card__primary">
           <img class="card__primary-img" src="./assets/images/products/tapede-tails.png" alt="tapede-tails">
           <p class="card__name">T-Shirt with Tape Details</p>
@@ -166,12 +166,12 @@
           </div>
         </div>
       </div>
-      <button class="btn btn-secondary">View All</button>
+      <button class="btn btn--secondary">View All</button>
     </section>
 
     <section class="product">
       <h2 class="title title--primary">top selling</h2>
-      <div class="card">
+      <div class="card product__list">
         <div class="card__primary">
           <img class="card__primary-img" src="./assets/images/products/veritical.png" alt="veritical">
           <p class="card__name">Vertical Striped Shirt</p>
@@ -233,7 +233,7 @@
           </div>
         </div>
       </div>
-      <button class="btn btn-secondary">View All</button>
+      <button class="btn btn--secondary">View All</button>
     </section>
     <!-- product end -->
 
@@ -270,7 +270,7 @@
           <img src="./assets/images/comments/prev-icon.svg" alt="">
         </div>
       </div>
-      <div class="card">
+      <div class="card comment__list">
         <div class="card__secondary">
           <div class="evaluate-comment">
             <img class="evaluate-comment__img" src="./assets/images/products/star-full.svg" alt="star-full">
@@ -279,11 +279,11 @@
             <img class="evaluate-comment__img" src="./assets/images/products/star-full.svg" alt="star-full">
             <img class="evaluate-comment__img" src="./assets/images/products/star-full.svg" alt="star-full">
           </div>
-          <div class="card__name">
+          <div class="comment__list-name card__name">
             Sarah M.
             <img class="card__secondary-img" src="./assets/images/comments/blue-check-mark.svg" alt="">
           </div>
-          <p class="desc desc-primary">"I'm blown away by the quality and style of the clothes I received from Shop.co.
+          <p class="desc desc--primary">"I'm blown away by the quality and style of the clothes I received from Shop.co.
             From
             casual wear to elegant dresses, every piece I've bought has exceeded my expectations.”</p>
         </div>
@@ -295,11 +295,11 @@
             <img class="evaluate-comment__img" src="./assets/images/products/star-full.svg" alt="star-full">
             <img class="evaluate-comment__img" src="./assets/images/products/star-full.svg" alt="star-full">
           </div>
-          <div class="card__name">
+          <div class="comment__list-name card__name">
             Alex K.
             <img class="card__secondary-img" src="./assets/images/comments/blue-check-mark.svg" alt="">
           </div>
-          <p class="desc desc-primary">"Finding clothes that align with my personal style used to be a challenge until I
+          <p class="desc desc--primary">"Finding clothes that align with my personal style used to be a challenge until I
             discovered Shop.co. The range of options they offer is truly remarkable, catering to a variety of tastes and
             occasions.”</p>
         </div>
@@ -311,11 +311,11 @@
             <img class="evaluate-comment__img" src="./assets/images/products/star-full.svg" alt="star-full">
             <img class="evaluate-comment__img" src="./assets/images/products/star-full.svg" alt="star-full">
           </div>
-          <div class="card__name">
+          <div class="comment__list-name card__name">
             James L.
             <img class="card__secondary-img" src="./assets/images/comments/blue-check-mark.svg" alt="">
           </div>
-          <p class="desc desc-primary">"As someone who's always on the lookout for unique fashion pieces, I'm thrilled
+          <p class="desc desc--primary">"As someone who's always on the lookout for unique fashion pieces, I'm thrilled
             to
             have stumbled upon Shop.co. The selection of clothes is not only diverse but also on-point with the latest
             trends.”</p>
@@ -328,11 +328,11 @@
   <!-- footer start  -->
   <footer>
     <fieldset class="footer">
-      <legend class="footer__contact">
+      <legend class="footer__contact container">
         <h2 class="title footer__contact-desc">STAY UPTO DATE ABOUT OUR LATEST OFFERS</h2>
         <form class="footer__contact-box" action="">
           <input class="footer__contact-form" type="text" name="email" placeholder="Enter your email address">
-          <button class="btn btn-contact">Subscribe to Newsletter</button>
+          <button class="btn btn--contact">Subscribe to Newsletter</button>
         </form>
       </legend>
       <div class="footer__action">
