--- a/practice-two/src/index.html
+++ b/practice-two/src/index.html
@@ -21,8 +21,8 @@
   <!-- sign up end  -->
 
   <!-- header start  -->
-  <header class="container">
-    <nav class="navbar">
+  <header>
+    <nav class="navbar container">
       <button class="navbar__nav"><img src="assets/images/headers/nav.png" alt="nav"></button>
       <h1><a class="link" href="javascrip:void(0)"><img class="navbar__logo" src="./assets/images/headers/shopco.png"
             alt="shopco"></a></h1>
@@ -50,7 +50,8 @@
     <div class="banner__wrapper container">
       <div class="banner__content">
         <h2 class="banner__title title title--secondary">FIND CLOTHES THAT MATCHES YOUR STYLE</h2>
-        <p class="banner__desc desc desc--primary">Browse through our diverse range of meticulously crafted garments, designed to
+        <p class="banner__desc desc desc--primary">Browse through our diverse range of meticulously crafted garments,
+          designed to
           bring
           out your individuality and cater to your sense of style.</p>
         <button class="banner__btn btn btn--primary">Shop Now</button>
@@ -103,8 +104,8 @@
       <h2 class="title title--primary">new arrivals</h2>
       <div class="card product__list">
         <div class="card__primary">
-          <img class="card__primary-img" src="./assets/images/products/tapede-tails.png" alt="tapede-tails">
-          <p class="card__name">T-Shirt with Tape Details</p>
+          <img class="card__primary-img" src="./assets/images/products/tapede-tails.svg" alt="tapede-tails">
+          <p class="product__name card__name">T-Shirt with Tape Details</p>
           <div class="evaluate-product">
             <img class="evaluate-product__img" src="./assets/images/products/star-full.svg" alt="star-full">
             <img class="evaluate-product__img" src="./assets/images/products/star-full.svg" alt="star-full">
@@ -118,8 +119,8 @@
           </div>
         </div>
         <div class="card__primary">
-          <img class="card__primary-img" src="./assets/images/products/fit-jeans.png" alt="fit-jeans">
-          <p class="card__name">Skinny Fit Jeans</p>
+          <img class="card__primary-img" src="./assets/images/products/fit-jeans.svg" alt="fit-jeans">
+          <p class="product__name card__name">Skinny Fit Jeans</p>
           <div class="evaluate-product">
             <img class="evaluate-product__img" src="./assets/images/products/star-full.svg" alt="star-full">
             <img class="evaluate-product__img" src="./assets/images/products/star-full.svg" alt="star-full">
@@ -134,8 +135,8 @@
           </div>
         </div>
         <div class="card__primary">
-          <img class="card__primary-img" src="./assets/images/products/checkered-shirt.png" alt="checkered-shirt">
-          <p class="card__name">Checkered Shirt</p>
+          <img class="card__primary-img" src="./assets/images/products/checkered-shirt.svg" alt="checkered-shirt">
+          <p class="product__name card__name">Checkered Shirt</p>
           <div class="evaluate-product">
             <img class="evaluate-product__img" src="./assets/images/products/star-full.svg" alt="star-full">
             <img class="evaluate-product__img" src="./assets/images/products/star-full.svg" alt="star-full">
@@ -149,7 +150,7 @@
           </div>
         </div>
         <div class="card__primary">
-          <img class="card__primary-img" src="./assets/images/products/striped-t-shirt.png" alt="striped-t-shirt">
+          <img class="card__primary-img" src="./assets/images/products/striped-t-shirt.svg" alt="striped-t-shirt">
           <p class="card__name">Sleeve Striped T-Shirt</p>
           <div class="evaluate-product">
             <img class="evaluate-product__img" src="./assets/images/products/star-full.svg" alt="star-full">
@@ -174,7 +175,7 @@
       <div class="card product__list">
         <div class="card__primary">
           <img class="card__primary-img" src="./assets/images/products/veritical.png" alt="veritical">
-          <p class="card__name">Vertical Striped Shirt</p>
+          <p class="product__name card__name">Vertical Striped Shirt</p>
           <div class="evaluate-product">
             <img class="evaluate-product__img" src="./assets/images/products/star-full.svg" alt="star-full">
             <img class="evaluate-product__img" src="./assets/images/products/star-full.svg" alt="star-full">
@@ -191,7 +192,7 @@
         </div>
         <div class="card__primary">
           <img class="card__primary-img" src="./assets/images/products/courage.png" alt="courage">
-          <p class="card__name">Courage Graphic T-Shirt</p>
+          <p class="product__name card__name">Courage Graphic T-Shirt</p>
           <div class="evaluate-product">
             <img class="evaluate-product__img" src="./assets/images/products/star-full.svg" alt="star-full">
             <img class="evaluate-product__img" src="./assets/images/products/star-full.svg" alt="star-full">
@@ -205,7 +206,7 @@
         </div>
         <div class="card__primary">
           <img class="card__primary-img" src="./assets/images/products/loose-fit.png" alt="loose-fit">
-          <p class="card__name">Loose Fit Bermuda Shorts</p>
+          <p class="product__name card__name">Loose Fit Bermuda Shorts</p>
           <div class="evaluate-product">
             <img class="evaluate-product__img" src="./assets/images/products/star-full.svg" alt="star-full">
             <img class="evaluate-product__img" src="./assets/images/products/star-full.svg" alt="star-full">
@@ -218,8 +219,8 @@
           </div>
         </div>
         <div class="card__primary">
-          <img class="card__primary-img" src="./assets/images/products/faded-skinny.png" alt="faded-skinny">
-          <p class="card__name">Faded Skinny Jeans</p>
+          <img class="card__primary-img" src="./assets/images/products/faded-skinny.svg" alt="faded-skinny">
+          <p class="product__name card__name">Faded Skinny Jeans</p>
           <div class="evaluate-product">
             <img class="evaluate-product__img" src="./assets/images/products/star-full.svg" alt="star-full">
             <img class="evaluate-product__img" src="./assets/images/products/star-full.svg" alt="star-full">
@@ -299,7 +300,8 @@
             Alex K.
             <img class="card__secondary-img" src="./assets/images/comments/blue-check-mark.svg" alt="">
           </div>
-          <p class="desc desc--primary">"Finding clothes that align with my personal style used to be a challenge until I
+          <p class="desc desc--primary">"Finding clothes that align with my personal style used to be a challenge until
+            I
             discovered Shop.co. The range of options they offer is truly remarkable, catering to a variety of tastes and
             occasions.”</p>
         </div>
@@ -338,7 +340,8 @@
       <div class="footer__action">
         <div class="footer__item">
           <h2><img class="footer__logo" src="./assets/images/headers/shopco.png" alt=""></h2>
-          <p class="desc desc-secondary">We have clothes that suits your style and which you’re proud to wear. From
+          <p class="footer__desc desc desc--secondary">We have clothes that suits your style and which you’re proud to
+            wear. From
             women
             to
             men.</p>
