fix UI brand section

--- a/practice-two/src/index.html
+++ b/practice-two/src/index.html
@@ -56,16 +56,16 @@
           out your individuality and cater to your sense of style.</p>
         <button class="banner__btn btn btn--primary">Shop Now</button>
         <ul class="info">
-          <li>
+          <li class="info__item">
             <p class="info__head">200+</p>
             <p class="desc">International Brands</p>
           </li>
-          <li class="info__line">
+          <li class="info__item info__item--line">
             <p class="info__head">2,000+</p>
             <p class="desc">High-Quality
               Products</p>
           </li>
-          <li class="info__center">
+          <li class="info__item">
             <p class="info__head">30,000+</p>
             <p class="desc">Happy Customers</p>
           </li>
@@ -85,10 +85,8 @@
       <img class="brand__img" src="./assets/images/brands/versace.png" alt="versace">
       <img class="brand__img" src="./assets/images/brands/zara.png" alt="zara">
       <img class="brand__img" src="./assets/images/brands/gucci.png" alt="gucci">
-      <div class="brand--center">
-        <img class="brand__img" src="./assets/images/brands/prada.png" alt="prada">
-        <img class="brand__img" src="./assets/images/brands/calvin.png" alt="calvin">
-      </div>
+      <img class="brand__img" src="./assets/images/brands/prada.png" alt="prada">
+      <img class="brand__img" src="./assets/images/brands/calvin.png" alt="calvin">
       <img class="brand__img-desktop" src="./assets/images/brands/versace-desktop.svg" alt="versace-desktop">
       <img class="brand__img-desktop" src="./assets/images/brands/zara-desktop.png" alt="zara-desktop">
       <img class="brand__img-desktop" src="./assets/images/brands/gucci-desktop.svg" alt="gucci-desktop">
