--- a/practice-two/src/index.html
+++ b/practice-two/src/index.html
@@ -119,7 +119,7 @@
           </div>
         </div>
         <div class="arrival__product product">
-          <img class="product__img"  src="./assets/images/products/fit-jeans.svg" alt="fit-jeans">
+          <img class="product__img" src="./assets/images/products/fit-jeans.svg" alt="fit-jeans">
           <p class="product__name">Checkered Shirt</p>
           <div class="product__feedback-wrapper">
             <div class="product__evaluate evaluate-product">
@@ -174,78 +174,78 @@
       <button class="arrival__btn btn btn--secondary">View All</button>
     </section>
 
-      <section class="top-selling">
-        <h2 class="top-selling__title title title--primary">top selling</h2>
-        <div class="top-selling__products">
-          <div class="top-selling__product product">
-            <img class="product__img" src="./assets/images/products/veritical.png" alt="veritical">
-            <p class="product__name">Vertical Striped Shirt</p>
-            <div class="product__feedback-wrapper">
-              <div class="product__evaluate evaluate-product">
-                <img class="evaluate-product__img" src="./assets/images/products/star-full.svg" alt="star-full">
-                <img class="evaluate-product__img" src="./assets/images/products/star-full.svg" alt="star-full">
-                <img class="evaluate-product__img" src="./assets/images/products/star-full.svg" alt="star-full">
-                <img class="evaluate-product__img" src="./assets/images/products/star-full.svg" alt="star-full">
-                <img class="evaluate-product__img" src="./assets/images/products/star-full.svg" alt="star-full">
-              </div>
-              <p class="product__feedback-score">5.0/<span class="product__feedback-score-max">5</span></p>
+    <section class="top-selling">
+      <h2 class="top-selling__title title title--primary">top selling</h2>
+      <div class="top-selling__products">
+        <div class="top-selling__product product">
+          <img class="product__img" src="./assets/images/products/veritical.png" alt="veritical">
+          <p class="product__name">Vertical Striped Shirt</p>
+          <div class="product__feedback-wrapper">
+            <div class="product__evaluate evaluate-product">
+              <img class="evaluate-product__img" src="./assets/images/products/star-full.svg" alt="star-full">
+              <img class="evaluate-product__img" src="./assets/images/products/star-full.svg" alt="star-full">
+              <img class="evaluate-product__img" src="./assets/images/products/star-full.svg" alt="star-full">
+              <img class="evaluate-product__img" src="./assets/images/products/star-full.svg" alt="star-full">
+              <img class="evaluate-product__img" src="./assets/images/products/star-full.svg" alt="star-full">
             </div>
-            <div class="product__price price">
-              <p>&#36;212</p>
+            <p class="product__feedback-score">5.0/<span class="product__feedback-score-max">5</span></p>
+          </div>
+          <div class="product__price price">
+            <p>&#36;212</p>
             <p class="price__sell">&#36;232</p>
             <p class="price__precent">-20%</p>
-            </div>
-          </div>
-          <div class="top-selling__product product">
-            <img class="product__img"  src="./assets/images/products/courage.png" alt="courage">
-            <p class="product__name">Courage Graphic T-Shirt</p>
-            <div class="product__feedback-wrapper">
-              <div class="product__evaluate evaluate-product">
-                <img class="evaluate-product__img" src="./assets/images/products/star-full.svg" alt="star-full">
-                <img class="evaluate-product__img" src="./assets/images/products/star-full.svg" alt="star-full">
-                <img class="evaluate-product__img" src="./assets/images/products/star-full.svg" alt="star-full">
-                <img class="evaluate-product__img" src="./assets/images/products/star-full.svg" alt="star-full">
-              </div>
-              <p class="product__feedback-score">4.0/<span class="product__feedback-score-max">5</span></p>
-            </div>
-            <div class="product__price price">
-              <p>&#36;145</p>
-            </div>
-          </div>
-          <div class="top-selling__product product">
-            <img class="product__img" src="./assets/images/products/loose-fit.png" alt="loose-fit">
-            <p class="product__name">Loose Fit Bermuda Shorts</p>
-            <div class="product__feedback-wrapper">
-              <div class="product__evaluate evaluate-product">
-                <img class="evaluate-product__img" src="./assets/images/products/star-full.svg" alt="star-full">
-                <img class="evaluate-product__img" src="./assets/images/products/star-full.svg" alt="star-full">
-                <img class="evaluate-product__img" src="./assets/images/products/star-full.svg" alt="star-full">
-              </div>
-              <p class="product__feedback-score">3.5/<span class="product__feedback-score-max">5</span></p>
-            </div>
-            <div class="product__price price">
-              <p>&#36;80</p>
-            </div>
-          </div>
-          <div class="top-selling__product product">
-            <img class="product__img" src="./assets/images/products/faded-skinny.svg" alt="faded-skinny">
-            <p class="product__name">Faded Skinny Jeans</p>
-            <div class="product__feedback-wrapper">
-              <div class="product__evaluate evaluate-product">
-                <img class="evaluate-product__img" src="./assets/images/products/star-full.svg" alt="star-full">
-                <img class="evaluate-product__img" src="./assets/images/products/star-full.svg" alt="star-full">
-                <img class="evaluate-product__img" src="./assets/images/products/star-full.svg" alt="star-full">
-                <img class="evaluate-product__img" src="./assets/images/products/star-full.svg" alt="star-full">
-                <img class="evaluate-product__img" src="./assets/images/products/star-half.svg" alt="star-full">
-              </div>
-              <p class="product__feedback-score">4.5/<span class="product__feedback-score-max">5</span></p>
-            </div>
-            <div class="product__price price">
-              <p>&#36;120</p>
-            </div>
           </div>
         </div>
-        <button class="top-selling__btn btn btn--secondary">View All</button>
+        <div class="top-selling__product product">
+          <img class="product__img" src="./assets/images/products/courage.png" alt="courage">
+          <p class="product__name">Courage Graphic T-Shirt</p>
+          <div class="product__feedback-wrapper">
+            <div class="product__evaluate evaluate-product">
+              <img class="evaluate-product__img" src="./assets/images/products/star-full.svg" alt="star-full">
+              <img class="evaluate-product__img" src="./assets/images/products/star-full.svg" alt="star-full">
+              <img class="evaluate-product__img" src="./assets/images/products/star-full.svg" alt="star-full">
+              <img class="evaluate-product__img" src="./assets/images/products/star-full.svg" alt="star-full">
+            </div>
+            <p class="product__feedback-score">4.0/<span class="product__feedback-score-max">5</span></p>
+          </div>
+          <div class="product__price price">
+            <p>&#36;145</p>
+          </div>
+        </div>
+        <div class="top-selling__product product">
+          <img class="product__img" src="./assets/images/products/loose-fit.png" alt="loose-fit">
+          <p class="product__name">Loose Fit Bermuda Shorts</p>
+          <div class="product__feedback-wrapper">
+            <div class="product__evaluate evaluate-product">
+              <img class="evaluate-product__img" src="./assets/images/products/star-full.svg" alt="star-full">
+              <img class="evaluate-product__img" src="./assets/images/products/star-full.svg" alt="star-full">
+              <img class="evaluate-product__img" src="./assets/images/products/star-full.svg" alt="star-full">
+            </div>
+            <p class="product__feedback-score">3.5/<span class="product__feedback-score-max">5</span></p>
+          </div>
+          <div class="product__price price">
+            <p>&#36;80</p>
+          </div>
+        </div>
+        <div class="top-selling__product product">
+          <img class="product__img" src="./assets/images/products/faded-skinny.svg" alt="faded-skinny">
+          <p class="product__name">Faded Skinny Jeans</p>
+          <div class="product__feedback-wrapper">
+            <div class="product__evaluate evaluate-product">
+              <img class="evaluate-product__img" src="./assets/images/products/star-full.svg" alt="star-full">
+              <img class="evaluate-product__img" src="./assets/images/products/star-full.svg" alt="star-full">
+              <img class="evaluate-product__img" src="./assets/images/products/star-full.svg" alt="star-full">
+              <img class="evaluate-product__img" src="./assets/images/products/star-full.svg" alt="star-full">
+              <img class="evaluate-product__img" src="./assets/images/products/star-half.svg" alt="star-full">
+            </div>
+            <p class="product__feedback-score">4.5/<span class="product__feedback-score-max">5</span></p>
+          </div>
+          <div class="product__price price">
+            <p>&#36;120</p>
+          </div>
+        </div>
+      </div>
+      <button class="top-selling__btn btn btn--secondary">View All</button>
     </section>
     <!-- product end -->
 
@@ -268,64 +268,63 @@
     <!-- browse end  -->
 
     <!-- comment start  -->
-    <section class="comment">
-      <div class="comment__head">
-        <h2 class="title title--primary">OUR HAPPY CUSTOMERS</h2>
+    <section class="comment container">
+      <div class="comment__heading">
+        <h2 class="comment__title title title--primary">OUR HAPPY CUSTOMERS</h2>
         <div class="comment__action">
           <img src="./assets/images/comments/next-icon.svg" alt="">
           <img src="./assets/images/comments/prev-icon.svg" alt="">
         </div>
       </div>
-      <div class="card comment__list">
-        <div class="card__secondary">
-          <div class="evaluate-comment">
+      <div class="comment__list">
+        <div class="comment-item">
+          <div class="comment-feedback evaluate-comment">
             <img class="evaluate-comment__img" src="./assets/images/products/star-full.svg" alt="star-full">
             <img class="evaluate-comment__img" src="./assets/images/products/star-full.svg" alt="star-full">
             <img class="evaluate-comment__img" src="./assets/images/products/star-full.svg" alt="star-full">
             <img class="evaluate-comment__img" src="./assets/images/products/star-full.svg" alt="star-full">
             <img class="evaluate-comment__img" src="./assets/images/products/star-full.svg" alt="star-full">
           </div>
-          <div class="comment__list-name card__name">
-            Sarah M.
-            <img class="card__secondary-img" src="./assets/images/comments/blue-check-mark.svg" alt="">
+          <div class="comment-item__name">
+            <p>Sarah M.</p>
+            <img class="comment-item__img" src="./assets/images/comments/blue-check-mark.svg" alt="">
           </div>
-          <p class="desc desc--primary">"I'm blown away by the quality and style of the clothes I received from Shop.co.
+          <p class="comment-item__desc desc desc--primary">"I'm blown away by the quality and style of the clothes I
+            received from Shop.co.
             From
             casual wear to elegant dresses, every piece I've bought has exceeded my expectations.”</p>
         </div>
-        <div class="card__secondary">
-          <div class="evaluate-comment">
+        <div class="comment-item">
+          <div class="comment-feedback evaluate-comment">
             <img class="evaluate-comment__img" src="./assets/images/products/star-full.svg" alt="star-full">
             <img class="evaluate-comment__img" src="./assets/images/products/star-full.svg" alt="star-full">
             <img class="evaluate-comment__img" src="./assets/images/products/star-full.svg" alt="star-full">
             <img class="evaluate-comment__img" src="./assets/images/products/star-full.svg" alt="star-full">
             <img class="evaluate-comment__img" src="./assets/images/products/star-full.svg" alt="star-full">
           </div>
-          <div class="comment__list-name card__name">
+          <div class="comment-item__name">
             Alex K.
-            <img class="card__secondary-img" src="./assets/images/comments/blue-check-mark.svg" alt="">
+            <img class="comment-item__img" src="./assets/images/comments/blue-check-mark.svg" alt="">
           </div>
-          <p class="desc desc--primary">"Finding clothes that align with my personal style used to be a challenge until
-            I
-            discovered Shop.co. The range of options they offer is truly remarkable, catering to a variety of tastes and
-            occasions.”</p>
+          <p class="comment-item__desc desc desc--primary">"Finding clothes that align with my personal style used to be
+            a challenge until I discovered Shop.co. The range of options they offer is truly remarkable, catering to a
+            variety of tastes and occasions.”</p>
         </div>
-        <div class="card__secondary">
-          <div class="evaluate-comment">
+        <div class="comment-item">
+          <div class="comment-feedback evaluate-comment">
             <img class="evaluate-comment__img" src="./assets/images/products/star-full.svg" alt="star-full">
             <img class="evaluate-comment__img" src="./assets/images/products/star-full.svg" alt="star-full">
             <img class="evaluate-comment__img" src="./assets/images/products/star-full.svg" alt="star-full">
             <img class="evaluate-comment__img" src="./assets/images/products/star-full.svg" alt="star-full">
             <img class="evaluate-comment__img" src="./assets/images/products/star-full.svg" alt="star-full">
           </div>
-          <div class="comment__list-name card__name">
+          <div class="comment-item__name">
             James L.
-            <img class="card__secondary-img" src="./assets/images/comments/blue-check-mark.svg" alt="">
+            <img class="comment-item__img" src="./assets/images/comments/blue-check-mark.svg" alt="">
           </div>
-          <p class="desc desc--primary">"As someone who's always on the lookout for unique fashion pieces, I'm thrilled
-            to
-            have stumbled upon Shop.co. The selection of clothes is not only diverse but also on-point with the latest
-            trends.”</p>
+          <p class="comment-item__desc desc desc--primary">"As someone who's always on the lookout for unique fashion
+            pieces, I'm thrilled to have stumbled upon Shop.co. The selection of clothes is not only diverse but also
+            on-point with the latest trends.”</p>
         </div>
       </div>
     </section>
@@ -336,7 +335,7 @@
   <footer>
     <fieldset class="footer">
       <legend class="footer__contact container">
-        <h2 class="title footer__contact-desc">STAY UPTO DATE ABOUT OUR LATEST OFFERS</h2>
+        <h2 class="footer__title title">STAY UPTO DATE ABOUT OUR LATEST OFFERS</h2>
         <form class="footer__contact-box" action="">
           <input class="footer__contact-form" type="text" name="email" placeholder="Enter your email address">
           <button class="btn btn--contact">Subscribe to Newsletter</button>
