--- a/practice-two/src/index.html
+++ b/practice-two/src/index.html
@@ -338,10 +338,10 @@
         <h2 class="footer__title title">STAY UPTO DATE ABOUT OUR LATEST OFFERS</h2>
         <form class="footer__contact-box" action="">
           <input class="footer__contact-form" type="text" name="email" placeholder="Enter your email address">
-          <button class="btn btn--contact">Subscribe to Newsletter</button>
+          <button class="footer__btn btn">Subscribe to Newsletter</button>
         </form>
       </legend>
-      <div class="footer__action">
+      <div class="footer__action container">
         <div class="footer__item">
           <h2><img class="footer__logo" src="./assets/images/headers/shopco.png" alt=""></h2>
           <p class="footer__desc desc desc--secondary">We have clothes that suits your style and which you’re proud to
@@ -356,7 +356,7 @@
             <img class="footer__icon" src="./assets/images/footers/github.png" alt="">
           </div>
         </div>
-        <div class="footer__list">
+        <div class="footer__group">
           <ul class="footer__item">
             <h3 class="footer__item-head">Company</h3>
             <li><a class="link-primary" href="javascript:void(0)">About</a></li>
