fix comment component desc and fix UI banner

--- a/practice-two/src/index.html
+++ b/practice-two/src/index.html
@@ -24,7 +24,7 @@
   <header>
     <nav class="navbar container">
       <button class="navbar__nav"><img src="assets/images/headers/nav.png" alt="nav"></button>
-      <h1><a class="link" href="javascrip:void(0)"><img class="navbar__logo" src="./assets/images/headers/shopco.png"
+      <h1><a class="sign-up__link href="javascrip:void(0)"><img class="navbar__logo" src="./assets/images/headers/shopco.png"
             alt="shopco"></a></h1>
       <ul class="navbar__list">
         <li><a class="link" href="">Shop</a></li>
@@ -50,7 +50,7 @@
     <div class="banner__wrapper container">
       <div class="banner__content">
         <h2 class="banner__title title title--secondary">FIND CLOTHES THAT MATCHES YOUR STYLE</h2>
-        <p class="banner__desc desc desc--primary">Browse through our diverse range of meticulously crafted garments,
+        <p class="banner__desc desc">Browse through our diverse range of meticulously crafted garments,
           designed to
           bring
           out your individuality and cater to your sense of style.</p>
@@ -58,16 +58,16 @@
         <ul class="info">
           <li class="info__item">
             <p class="info__head">200+</p>
-            <p class="desc">International Brands</p>
+            <p class="info__desc desc">International Brands</p>
           </li>
           <li class="info__item info__item--line">
             <p class="info__head">2,000+</p>
-            <p class="desc">High-Quality
+            <p class="info__desc desc">High-Quality
               Products</p>
           </li>
-          <li class="info__item">
+          <li class="info__item info__item--center">
             <p class="info__head">30,000+</p>
-            <p class="desc">Happy Customers</p>
+            <p class="info__desc desc">Happy Customers</p>
           </li>
         </ul>
       </div>
@@ -289,7 +289,7 @@
             <p>Sarah M.</p>
             <img class="comment-item__img" src="./assets/images/comments/blue-check-mark.svg" alt="">
           </div>
-          <p class="comment-item__desc desc desc--primary">"I'm blown away by the quality and style of the clothes I
+          <p class="comment-item__desc desc">"I'm blown away by the quality and style of the clothes I
             received from Shop.co.
             From
             casual wear to elegant dresses, every piece I've bought has exceeded my expectations.”</p>
@@ -306,7 +306,7 @@
             Alex K.
             <img class="comment-item__img" src="./assets/images/comments/blue-check-mark.svg" alt="">
           </div>
-          <p class="comment-item__desc desc desc--primary">"Finding clothes that align with my personal style used to be
+          <p class="comment-item__desc desc">"Finding clothes that align with my personal style used to be
             a challenge until I discovered Shop.co. The range of options they offer is truly remarkable, catering to a
             variety of tastes and occasions.”</p>
         </div>
@@ -322,7 +322,7 @@
             James L.
             <img class="comment-item__img" src="./assets/images/comments/blue-check-mark.svg" alt="">
           </div>
-          <p class="comment-item__desc desc desc--primary">"As someone who's always on the lookout for unique fashion
+          <p class="comment-item__desc desc">"As someone who's always on the lookout for unique fashion
             pieces, I'm thrilled to have stumbled upon Shop.co. The selection of clothes is not only diverse but also
             on-point with the latest trends.”</p>
         </div>
@@ -344,7 +344,7 @@
       <div class="footer__action container">
         <div class="footer__item">
           <h2><img class="footer__logo" src="./assets/images/headers/shopco.png" alt=""></h2>
-          <p class="footer__desc desc desc--secondary">We have clothes that suits your style and which you’re proud to
+          <p class="footer__desc desc">We have clothes that suits your style and which you’re proud to
             wear. From
             women
             to
@@ -359,31 +359,31 @@
         <div class="footer__group">
           <ul class="footer__item">
             <h3 class="footer__item-head">Company</h3>
-            <li><a class="link-primary" href="javascript:void(0)">About</a></li>
-            <li><a class="link-primary" href="javascript:void(0)">Features</a></li>
-            <li><a class="link-primary" href="javascript:void(0)">Works</a></li>
-            <li><a class="link-primary" href="javascript:void(0)">Career</a></li>
+            <li><a class="link" href="javascript:void(0)">About</a></li>
+            <li><a class="link" href="javascript:void(0)">Features</a></li>
+            <li><a class="link" href="javascript:void(0)">Works</a></li>
+            <li><a class="link" href="javascript:void(0)">Career</a></li>
           </ul>
           <ul class="footer__item">
             <h3 class="footer__item-head">Help</h3>
-            <li><a class="link-primary" href="javascript:void(0)">Customer Support</a></li>
-            <li><a class="link-primary" href="javascript:void(0)">Delivery Details</a></li>
-            <li><a class="link-primary" href="javascript:void(0)">Terms & Conditions</a></li>
-            <li><a class="link-primary" href="javascript:void(0)">Privacy Policy</a></li>
+            <li><a class="link" href="javascript:void(0)">Customer Support</a></li>
+            <li><a class="link" href="javascript:void(0)">Delivery Details</a></li>
+            <li><a class="link" href="javascript:void(0)">Terms & Conditions</a></li>
+            <li><a class="link" href="javascript:void(0)">Privacy Policy</a></li>
           </ul>
           <ul class="footer__item">
             <h3 class="footer__item-head">FAQ</h3>
-            <li><a class="link-primary" href="javascript:void(0)">Account</a></li>
-            <li><a class="link-primary" href="javascript:void(0)">Manage Deliveries</a></li>
-            <li><a class="link-primary" href="javascript:void(0)">Orders</a></li>
-            <li><a class="link-primary" href="javascript:void(0)">Payments</a></li>
+            <li><a class="link" href="javascript:void(0)">Account</a></li>
+            <li><a class="link" href="javascript:void(0)">Manage Deliveries</a></li>
+            <li><a class="link" href="javascript:void(0)">Orders</a></li>
+            <li><a class="link" href="javascript:void(0)">Payments</a></li>
           </ul>
           <ul class="footer__item">
             <h3 class="footer__item-head">Resources</h3>
-            <li><a class="link-primary" href="javascript:void(0)">Free eBooks</a></li>
-            <li><a class="link-primary" href="javascript:void(0)">Development Tutoria</a></li>
-            <li><a class="link-primary" href="javascript:void(0)">How to - Blog</a></li>
-            <li><a class="link-primary" href="javascript:void(0)">Youtube Playlist</a></li>
+            <li><a class="link" href="javascript:void(0)">Free eBooks</a></li>
+            <li><a class="link" href="javascript:void(0)">Development Tutoria</a></li>
+            <li><a class="link" href="javascript:void(0)">How to - Blog</a></li>
+            <li><a class="link" href="javascript:void(0)">Youtube Playlist</a></li>
           </ul>
         </div>
       </div>
