delete emty class brand__img--max in brand section

--- a/practice-two/src/index.html
+++ b/practice-two/src/index.html
@@ -85,8 +85,8 @@
       <img class="brand__img" src="./assets/images/brands/versace.png" alt="versace">
       <img class="brand__img" src="./assets/images/brands/zara.png" alt="zara">
       <img class="brand__img" src="./assets/images/brands/gucci.png" alt="gucci">
-      <img class="brand__img brand__img--max" src="./assets/images/brands/prada.png" alt="prada">
-      <img class="brand__img brand__img--max" src="./assets/images/brands/calvin.png" alt="calvin">
+      <img class="brand__img" src="./assets/images/brands/prada.png" alt="prada">
+      <img class="brand__img" src="./assets/images/brands/calvin.png" alt="calvin">
       <img class="brand__img-desktop" src="./assets/images/brands/versace-desktop.svg" alt="versace-desktop">
       <img class="brand__img-desktop" src="./assets/images/brands/zara-desktop.png" alt="zara-desktop">
       <img class="brand__img-desktop" src="./assets/images/brands/gucci-desktop.svg" alt="gucci-desktop">
