--- a/practice-two/src/index.html
+++ b/practice-two/src/index.html
@@ -24,8 +24,8 @@
   <header>
     <nav class="navbar container">
       <button class="navbar__nav"><img src="assets/images/headers/nav.png" alt="nav"></button>
-      <h1><a class="sign-up__link href="javascrip:void(0)"><img class="navbar__logo" src="./assets/images/headers/shopco.png"
-            alt="shopco"></a></h1>
+      <h1><a class="sign-up__link href=" javascrip:void(0)"><img class="navbar__logo"
+            src="./assets/images/headers/shopco.png" alt="shopco"></a></h1>
       <ul class="navbar__list">
         <li><a class="link" href="">Shop</a></li>
         <li><a class="link" href="">On Sale</a></li>
@@ -62,10 +62,9 @@
           </li>
           <li class="info__item info__item--line">
             <p class="info__head">2,000+</p>
-            <p class="info__desc desc">High-Quality
-              Products</p>
+            <p class="info__desc info__desc--right desc">High-Quality Products</p>
           </li>
-          <li class="info__item info__item--center">
+          <li class="info__item">
             <p class="info__head">30,000+</p>
             <p class="info__desc desc">Happy Customers</p>
           </li>
