change px to toRem in layout

--- a/practice-two/src/index.html
+++ b/practice-two/src/index.html
@@ -119,7 +119,7 @@
         </div>
         <div class="arrival__product product">
           <img class="product__img" src="./assets/images/products/fit-jeans.svg" alt="fit-jeans">
-          <p class="product__name">Checkered Shirt</p>
+          <p class="product__name">Skinny Fit Jeans</p>
           <div class="product__feedback-wrapper">
             <div class="product__evaluate evaluate-product">
               <img class="evaluate-product__img" src="./assets/images/products/star-full.svg" alt="star-full">
@@ -130,11 +130,30 @@
             <p class="product__feedback-score">3.5/<span class="product__feedback-score-max">5</span></p>
           </div>
           <div class="product__price price">
+            <p>&#36;240</p>
+            <p class="price__sell">&#36;260</p>
+            <p class="price__precent">-20%</p>
+          </div>
+        </div>
+        <div class="arrival__product product">
+          <img class="product__img" src="./assets/images/products/checkered-shirt.svg" alt="striped-t-shirt">
+          <p class="product__name">Checkered Shirt</p>
+          <div class="product__feedback-wrapper">
+            <div class="product__evaluate evaluate-product">
+              <img class="evaluate-product__img" src="./assets/images/products/star-full.svg" alt="star-full">
+              <img class="evaluate-product__img" src="./assets/images/products/star-full.svg" alt="star-full">
+              <img class="evaluate-product__img" src="./assets/images/products/star-full.svg" alt="star-full">
+              <img class="evaluate-product__img" src="./assets/images/products/star-full.svg" alt="star-full">
+              <img class="evaluate-product__img" src="./assets/images/products/star-half.svg" alt="star-full">
+            </div>
+            <p class="product__feedback-score">4.5/<span class="product__feedback-score-max">5</span></p>
+          </div>
+          <div class="product__price price">
             <p>&#36;180</p>
           </div>
         </div>
         <div class="arrival__product product">
-          <img class="product__img" src="./assets/images/products/striped-t-shirt.svg" alt="striped-t-shirt">
+          <img class="product__img" src="./assets/images/products/striped-t-shirt.svg" alt="tapede-tails">
           <p class="product__name">Sleeve Striped T-Shirt</p>
           <div class="product__feedback-wrapper">
             <div class="product__evaluate evaluate-product">
@@ -150,23 +169,6 @@
             <p>&#36;130</p>
             <p class="price__sell">&#36;160</p>
             <p class="price__precent">-30%</p>
-          </div>
-        </div>
-        <div class="arrival__product product">
-          <img class="product__img" src="./assets/images/products/tapede-tails.svg" alt="tapede-tails">
-          <p class="product__name">T-Shirt with Tape Details</p>
-          <div class="product__feedback-wrapper">
-            <div class="product__evaluate evaluate-product">
-              <img class="evaluate-product__img" src="./assets/images/products/star-full.svg" alt="star-full">
-              <img class="evaluate-product__img" src="./assets/images/products/star-full.svg" alt="star-full">
-              <img class="evaluate-product__img" src="./assets/images/products/star-full.svg" alt="star-full">
-              <img class="evaluate-product__img" src="./assets/images/products/star-full.svg" alt="star-full">
-              <img class="evaluate-product__img" src="./assets/images/products/star-half.svg" alt="star-full">
-            </div>
-            <p class="product__feedback-score">4.5/<span class="product__feedback-score-max">5</span></p>
-          </div>
-          <div class="product__price price">
-            <p>&#36;120</p>
           </div>
         </div>
       </div>
