detele components title

--- a/practice-two/src/index.html
+++ b/practice-two/src/index.html
@@ -49,7 +49,7 @@
   <section class="banner">
     <div class="banner__wrapper container">
       <div class="banner__content">
-        <h2 class="banner__title title title--secondary">FIND CLOTHES THAT MATCHES YOUR STYLE</h2>
+        <h2 class="banner__title title">FIND CLOTHES THAT MATCHES YOUR STYLE</h2>
         <p class="banner__desc desc">Browse through our diverse range of meticulously crafted garments,
           designed to
           bring
@@ -86,11 +86,13 @@
       <img class="brand__img" src="./assets/images/brands/gucci.png" alt="gucci">
       <img class="brand__img" src="./assets/images/brands/prada.png" alt="prada">
       <img class="brand__img" src="./assets/images/brands/calvin.png" alt="calvin">
-      <img class="brand__img-desktop" src="./assets/images/brands/versace-desktop.svg" alt="versace-desktop">
-      <img class="brand__img-desktop" src="./assets/images/brands/zara-desktop.png" alt="zara-desktop">
-      <img class="brand__img-desktop" src="./assets/images/brands/gucci-desktop.svg" alt="gucci-desktop">
-      <img class="brand__img-desktop" src="./assets/images/brands/prada-desktop.svg" alt="prada-desktop">
-      <img class="brand__img-desktop" src="./assets/images/brands/calvin-desktop.svg" alt="calvin-desktop">
+    </div>
+    <div class="brand__wrapper-xxl container">
+      <img class="brand__img" src="./assets/images/brands/versace-desktop.svg" alt="versace-desktop">
+      <img class="brand__img" src="./assets/images/brands/zara-desktop.png" alt="zara-desktop">
+      <img class="brand__img" src="./assets/images/brands/gucci-desktop.svg" alt="gucci-desktop">
+      <img class="brand__img" src="./assets/images/brands/prada-desktop.svg" alt="prada-desktop">
+      <img class="brand__img" src="./assets/images/brands/calvin-desktop.svg" alt="calvin-desktop">
     </div>
   </section>
   <!-- brand end  -->
@@ -259,7 +261,7 @@
         <img class="browse__img" src="./assets/images/browses/party.svg" alt="">
         <img class="browse__img" src="./assets/images/browses/gym.svg" alt="">
       </div>
-      <div class="browse__wrapper-desktop">
+      <div class="browse__wrapper-xxl">
         <img class="browse__img" src="./assets/images/browses/casual-desktop.svg" alt="">
         <img class="browse__img" src="./assets/images/browses/formal-desktop.svg" alt="">
         <img class="browse__img" src="./assets/images/browses/party-desktop.svg" alt="">
