add alt for img

--- a/practice-two/src/index.html
+++ b/practice-two/src/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles/index.scss">
   <title>Responsive web</title>
+  <link rel="icon" type="image/x-icon" href="./assets/images/headers/favicon.png">
 </head>
 
 <body>
@@ -24,13 +25,13 @@
   <header>
     <nav class="navbar container">
       <button class="navbar__nav"><img src="assets/images/headers/nav.png" alt="nav"></button>
-      <h1><a class="sign-up__link href=" javascrip:void(0)"><img class="navbar__logo"
+      <h1><a class="sign-up__link" href="javascrip:void(0)"><img class="navbar__logo"
             src="./assets/images/headers/shopco.png" alt="shopco"></a></h1>
       <ul class="navbar__list">
-        <li><a class="link" href="">Shop</a></li>
-        <li><a class="link" href="">On Sale</a></li>
-        <li><a class="link" href="">New Arrivals</a></li>
-        <li><a class="link" href="">Brand</a></li>
+        <li><a class="link" href="javascrip:void(0)">Shop</a></li>
+        <li><a class="link" href="javascrip:void(0)">On Sale</a></li>
+        <li><a class="link" href="javascrip:void(0)">New Arrivals</a></li>
+        <li><a class="link" href="javascrip:void(0)">Brand</a></li>
       </ul>
       <form action="">
         <input class="navbar__search" type="text" placeholder="Search for products...">
@@ -71,8 +72,8 @@
         </ul>
       </div>
       <div class="banner__img">
-        <img class="banner__img-left" src="./assets/images/banners/star.png" alt="">
-        <img class="banner__img-right" src="./assets/images/banners/start-right.png" alt="">
+        <img class="banner__img-left" src="./assets/images/banners/star.png" alt="star">
+        <img class="banner__img-right" src="./assets/images/banners/start-right.png" alt="start-right">
       </div>
     </div>
   </section>
@@ -256,16 +257,16 @@
     <section class="browse">
       <h2 class="browse__title title title--primary">BROWSE BY dress STYLE</h2>
       <div class="browse__wrapper">
-        <img class="browse__img" src="./assets/images/browses/casual.svg" alt="">
-        <img class="browse__img" src="./assets/images/browses/formal.svg" alt="">
-        <img class="browse__img" src="./assets/images/browses/party.svg" alt="">
-        <img class="browse__img" src="./assets/images/browses/gym.svg" alt="">
+        <img class="browse__img" src="./assets/images/browses/casual.svg" alt="casual">
+        <img class="browse__img" src="./assets/images/browses/formal.svg" alt="formal">
+        <img class="browse__img" src="./assets/images/browses/party.svg" alt="party">
+        <img class="browse__img" src="./assets/images/browses/gym.svg" alt="gym">
       </div>
       <div class="browse__wrapper-xxl">
-        <img class="browse__img" src="./assets/images/browses/casual-desktop.svg" alt="">
-        <img class="browse__img" src="./assets/images/browses/formal-desktop.svg" alt="">
-        <img class="browse__img" src="./assets/images/browses/party-desktop.svg" alt="">
-        <img class="browse__img" src="./assets/images/browses/gym-desktop.svg" alt="">
+        <img class="browse__img" src="./assets/images/browses/casual-desktop.svg" alt="casual-desktop">
+        <img class="browse__img" src="./assets/images/browses/formal-desktop.svg" alt="formal-desktop">
+        <img class="browse__img" src="./assets/images/browses/party-desktop.svg" alt="party-desktop">
+        <img class="browse__img" src="./assets/images/browses/gym-desktop.svg" alt="gym-desktop">
       </div>
     </section>
     <!-- browse end  -->
@@ -275,8 +276,8 @@
       <div class="comment__heading">
         <h2 class="comment__title title title--primary">OUR HAPPY CUSTOMERS</h2>
         <div class="comment__action">
-          <img src="./assets/images/comments/next-icon.svg" alt="">
-          <img src="./assets/images/comments/prev-icon.svg" alt="">
+          <img src="./assets/images/comments/next-icon.svg" alt="next-icon">
+          <img src="./assets/images/comments/prev-icon.svg" alt="prev-icon">
         </div>
       </div>
       <div class="comment__list">
@@ -290,7 +291,7 @@
           </div>
           <div class="comment-item__name">
             <p>Sarah M.</p>
-            <img class="comment-item__img" src="./assets/images/comments/blue-check-mark.svg" alt="">
+            <img class="comment-item__img" src="./assets/images/comments/blue-check-mark.svg" alt="blue-check-mark">
           </div>
           <p class="comment-item__desc desc">"I'm blown away by the quality and style of the clothes I
             received from Shop.co.
@@ -307,7 +308,7 @@
           </div>
           <div class="comment-item__name">
             Alex K.
-            <img class="comment-item__img" src="./assets/images/comments/blue-check-mark.svg" alt="">
+            <img class="comment-item__img" src="./assets/images/comments/blue-check-mark.svg" alt="blue-check-mark">
           </div>
           <p class="comment-item__desc desc">"Finding clothes that align with my personal style used to be
             a challenge until I discovered Shop.co. The range of options they offer is truly remarkable, catering to a
@@ -323,7 +324,7 @@
           </div>
           <div class="comment-item__name">
             James L.
-            <img class="comment-item__img" src="./assets/images/comments/blue-check-mark.svg" alt="">
+            <img class="comment-item__img" src="./assets/images/comments/blue-check-mark.svg" alt="blue-check-mark">
           </div>
           <p class="comment-item__desc desc">"As someone who's always on the lookout for unique fashion
             pieces, I'm thrilled to have stumbled upon Shop.co. The selection of clothes is not only diverse but also
@@ -346,17 +347,17 @@
       </legend>
       <div class="footer__action container">
         <div class="footer__item">
-          <h2><img class="footer__logo" src="./assets/images/headers/shopco.png" alt=""></h2>
+          <h2><img class="footer__logo" src="./assets/images/headers/shopco.png" alt="shopco"></h2>
           <p class="footer__desc desc">We have clothes that suits your style and which you’re proud to
             wear. From
             women
             to
             men.</p>
           <div class="footer__social">
-            <img class="footer__icon" src="./assets/images/footers/twitter.png" alt="">
-            <img class="footer__icon" src="./assets/images/footers/fb.png" alt="">
-            <img class="footer__icon" src="./assets/images/footers/intagram.png" alt="">
-            <img class="footer__icon" src="./assets/images/footers/github.png" alt="">
+            <img class="footer__icon" src="./assets/images/footers/twitter.png" alt="twitter">
+            <img class="footer__icon" src="./assets/images/footers/fb.png" alt="fb">
+            <img class="footer__icon" src="./assets/images/footers/intagram.png" alt="intagram">
+            <img class="footer__icon" src="./assets/images/footers/github.png" alt="github">
           </div>
         </div>
         <div class="footer__group">
@@ -393,8 +394,8 @@
       <div class="copyright">
         <p>Shop.co © 2000-2023, All Rights Reserved</p>
         <div>
-          <img class="copyright__img" src="./assets/images/footers/visa.svg" alt="">
-          <img class="copyright__img" src="./assets/images/footers/paypal.svg" alt="">
+          <img class="copyright__img" src="./assets/images/footers/visa.svg" alt="visa">
+          <img class="copyright__img" src="./assets/images/footers/master.svg" alt="paypal">
           <img class="copyright__img" src="./assets/images/footers/paypal.svg" alt="">
           <img class="copyright__img" src="./assets/images/footers/ip-pay.svg" alt="">
           <img class="copyright__img" src="./assets/images/footers/g-pay.svg" alt="">
