create variable  1240px fix UI for banner info

--- a/practice-two/src/index.html
+++ b/practice-two/src/index.html
@@ -57,17 +57,23 @@
           out your individuality and cater to your sense of style.</p>
         <button class="banner__btn btn btn--primary">Shop Now</button>
         <ul class="info">
-          <li class="info__item">
-            <p class="info__head">200+</p>
-            <p class="info__desc desc">International Brands</p>
+          <li class="info__box">
+            <div class="info__item">
+              <p class="info__head">200+</p>
+              <p class="info__desc desc">International Brands</p>
+            </div>
           </li>
-          <li class="info__item info__item--line">
-            <p class="info__head">2,000+</p>
-            <p class="info__desc info__desc--right desc">High-Quality Products</p>
+          <li class="info__box info__box--line">
+            <div class="info__item">
+              <p class="info__head">2,000+</p>
+              <p class="info__desc desc">High-Quality Products</p>
+            </div>
           </li>
-          <li class="info__item">
-            <p class="info__head">30,000+</p>
-            <p class="info__desc desc">Happy Customers</p>
+          <li class="info__box">
+            <div class="info__item">
+              <p class="info__head">30,000+</p>
+              <p class="info__desc desc">Happy Customers</p>
+            </div>
           </li>
         </ul>
       </div>
