--- a/practice-two/src/index.html
+++ b/practice-two/src/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles/index.scss">
+  <link rel="stylesheet" href="styles/index.css">
   <title>Responsive web</title>
   <link rel="icon" type="image/x-icon" href="./assets/images/headers/favicon.png">
 </head>
