margin btn for arrivals

--- a/practice-two/src/index.html
+++ b/practice-two/src/index.html
@@ -181,7 +181,9 @@
           </div>
         </div>
       </div>
-      <button class="arrival__btn btn btn--secondary">View All</button>
+      <div class="arrival__box-btn">
+        <button class="arrival__btn btn btn--secondary">View All</button>
+      </div>
     </section>
 
     <section class="top-selling">
