--- a/practice-two/src/index.html
+++ b/practice-two/src/index.html
@@ -33,7 +33,7 @@
         <li><a class="link" href="javascrip:void(0)">New Arrivals</a></li>
         <li><a class="link" href="javascrip:void(0)">Brand</a></li>
       </ul>
-      <form action="">
+      <form action="index.html">
         <input class="navbar__search" type="text" placeholder="Search for products...">
       </form>
       <div class="navbar__option">
@@ -370,28 +370,28 @@
         </div>
         <div class="footer__group">
           <ul class="footer__item">
-            <h3 class="footer__item-head">Company</h3>
+            <li class="footer__item-head">Company</li>
             <li><a class="link" href="javascript:void(0)">About</a></li>
             <li><a class="link" href="javascript:void(0)">Features</a></li>
             <li><a class="link" href="javascript:void(0)">Works</a></li>
             <li><a class="link" href="javascript:void(0)">Career</a></li>
           </ul>
           <ul class="footer__item">
-            <h3 class="footer__item-head">Help</h3>
+            <li class="footer__item-head">Help</li>
             <li><a class="link" href="javascript:void(0)">Customer Support</a></li>
             <li><a class="link" href="javascript:void(0)">Delivery Details</a></li>
             <li><a class="link" href="javascript:void(0)">Terms & Conditions</a></li>
             <li><a class="link" href="javascript:void(0)">Privacy Policy</a></li>
           </ul>
           <ul class="footer__item">
-            <h3 class="footer__item-head">FAQ</h3>
+            <li class="footer__item-head">FAQ</li>
             <li><a class="link" href="javascript:void(0)">Account</a></li>
             <li><a class="link" href="javascript:void(0)">Manage Deliveries</a></li>
             <li><a class="link" href="javascript:void(0)">Orders</a></li>
             <li><a class="link" href="javascript:void(0)">Payments</a></li>
           </ul>
           <ul class="footer__item">
-            <h3 class="footer__item-head">Resources</h3>
+            <li class="footer__item-head">Resources</li>
             <li><a class="link" href="javascript:void(0)">Free eBooks</a></li>
             <li><a class="link" href="javascript:void(0)">Development Tutoria</a></li>
             <li><a class="link" href="javascript:void(0)">How to - Blog</a></li>
